meta card facebook et twiter card

--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@ http://ogp.me/ms#"
         property="og:title"
         content="Nina Carducci-Photographe portraits & événementiel"
       />
-      <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
+      <meta
+        property="og:url"
+        content="https://theroseofthephoenix.github.io/ninacarducci-p9/"
+      />
       <meta
         property="og:image"
-        content="http://127.0.0.1:5500/assets/imagesWebP/auto-portrait-Nina-Carducci.webp"
+        content="https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp"
       />
       <meta
         property="og:description"
         content="Je suis Nina Carducci-Photographe portraits & événementiel.
 Mon numéro de téléphone : 05 56 67 78 89.
-Je réponds au téléphone du lundi au vendredi de 10h à 19h.
-"
+Je réponds au téléphone du lundi au vendredi de 10h à 19h."
       />
       <meta
         property="business:contact_data:street_address"
         content="68 avenue Alsace-Lorraine"
       />
       <meta property="business:contact_data:locality" content="Bordeaux" />
-      <meta property="business:contact_data:region" content="" />
+      <meta property="business:contact_data:region" content="Gironde" />
       <meta property="business:contact_data:postal_code" content="33200" />
       <meta property="business:contact_data:country_name" content="France" />
 
@@ -43,20 +45,26 @@ Je réponds au téléphone du lundi au vendredi de 10h à 19h.
       <meta name="twitter:card" content="summary" />
       <meta
         name="twitter:title"
-        content="Nina Carducci-Photographe portraits & événementiel."
+        content="Nina Carducci-Photographe portraits & événementiel"
       />
-      <meta name="twitter:site" content="@http://127.0.0.1:5500/index.html" />
+      <meta
+        name="twitter:site"
+        content="@https://theroseofthephoenix.github.io/ninacarducci-p9/"
+      />
       <meta
         name="twitter:description"
         content="Je suis Nina Carducci-Photographe
-    portraits & événementiel. Mon numéro de téléphone : 05 56 67 78 89. Je
-    réponds au téléphone du lundi au vendredi de 10h à 19h. "
+portraits & événementiel. Mon numéro de téléphone : 05 56 67 78 89. Je
+réponds au téléphone du lundi au vendredi de 10h à 19h."
       />
       <meta
         name="twitter:image"
-        content="http://127.0.0.1:5500/assets/imagesWebP/auto-portrait-Nina-Carducci.webp"
+        content="	https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp"
       />
-      <meta name="twitter:image:alt" content="auto portrait de Nina Carducci" />
+      <meta
+        name="twitter:image:alt"
+        content="auto portrait de Nina Carducci photographe en Gironde-Bordeau"
+      />
       <!-- fin des meta tag -->
 
       <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
