ajout des prix dans les données enrichis

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <script type="application/ld+json">
         {
           "@context": "http://schema.org",
+          "image": "	https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp",
           "@type": "LocalBusiness",
           "name": "Photographe - Nina Carducci",
           "address": {
@@ -35,7 +36,8 @@
             "addressLocality": "Bordeaux"
           },
           "telephone": "05 56 67 78 89",
-          "Openinghours": "du lundi au vendredi de 10h à 19h"
+          "Openinghours": "du lundi au vendredi de 10h à 19h",
+          "priceRange" : "Shooting photo 350€/demi journée, Retouches 50€/photo, Album photos 400€ album A4"
         }
       
       </script>
