validation google search

--- a/index.html
+++ b/index.html
@@ -1,88 +1,117 @@
 <!DOCTYPE html>
- <html lang="fr"> <!-- ajout de la langue  -->
-    <head>
-      <title>Nina Carducci-Photographe portraits & événementiel à Bordeaux</title> <!-- ajout d'un titre -->
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="description"content="Nina Carducci-Photographe portraits & événementiel à Bordeaux"
-      /><!-- ajout de la meta description  -->
-      <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-      <link rel="stylesheet" href="./assets/style.min.css" /> <!-- minifi css  -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-        rel="stylesheet"
-      />
-      <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-      <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"
-      ></script>
-      <script src="./assets/maugallery.js"></script>
-      <script src="./assets/scripts.js"></script>
-      <!-- données enrichis -->
-      <script type="application/ld+json">
-        {
-          "@context": "http://schema.org",
-          "image": "	https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp",
-          "@type": "LocalBusiness",
-          "name": "Photographe - Nina Carducci",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "68 avenue Alsace-Lorraine",
-            "postalCode": "33200",
-            "addressLocality": "Bordeaux"
-          },
-          "telephone": "05 56 67 78 89",
-          "Openinghours": "du lundi au vendredi de 10h à 19h",
-          "priceRange" : "Shooting photo 350€/demi journée, Retouches 50€/photo, Album photos 400€ album A4"
-        }
-      
-      </script>
+<html lang="fr">
+  <!-- ajout de la langue  -->
+  <head>
+    <title>Nina Carducci-Photographe portraits & événementiel à Bordeaux</title>
+    <!-- ajout d'un titre -->
+    <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="nhNgnWwaTmgcRmnBD7_91RssRliogLORcSFpMUYaPsE"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Nina Carducci-Photographe portraits & événementiel à Bordeaux"
+    />
+    <!-- ajout de la meta description  -->
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/style.min.css" />
+    <!-- minifi css  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/maugallery.js"></script>
+    <script src="./assets/scripts.js"></script>
+    <!-- données enrichis -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "image": "	https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp",
+        "@type": "LocalBusiness",
+        "name": "Photographe - Nina Carducci",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "postalCode": "33200",
+          "addressLocality": "Bordeaux",
+          "addressCountry": "France"
+        },
+        "telephone": "05 56 67 78 89",
+        "Openinghours": "du lundi au vendredi de 10h à 19h",
+        "priceRange": "Shooting photo 350€/demi journée, Retouches 50€/photo, Album photos 400€ album A4"
+      }
+    </script>
 
-      	<!-- meta réseaux sociaux -->
-	<meta property="og:title" content="Nina Carducci-Photographe portraits & événementiel à Bordeaux" >
-	<meta property="og:type" content="website" >
-	<meta property="og:description"
-		content="Site web de Nina Carducci photographe freelance, reserver votre secance shooting et mémoriser vos evenements à Bordeaux" >
-	<meta property="author" content="Nina Carducci" >
-	<meta property="og:image" content="./assets/images/nina.webp" >
-	<meta property="og:url" content="https://theroseofthephoenix.github.io/ninacarducci-p9//">
+    <!-- meta réseaux sociaux -->
+    <meta
+      property="og:title"
+      content="Nina Carducci-Photographe portraits & événementiel à Bordeaux"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Site web de Nina Carducci photographe freelance, reserver votre secance shooting et mémoriser vos evenements à Bordeaux"
+    />
+    <meta property="author" content="Nina Carducci" />
+    <meta property="og:image" content="./assets/images/nina.webp" />
+    <meta
+      property="og:url"
+      content="https://theroseofthephoenix.github.io/ninacarducci-p9//"
+    />
 
-	<!-- meta card twitter -->
-	<meta name="twitter:card" content="summary" >
-	<meta name="twitter:site" content="@ninacarducci" >
-	<meta name="twitter:creator" content="@ninacarducci" >
-	<meta property="og:url" content="https://theroseofthephoenix.github.io/ninacarducci-p9/" >
-	<meta property="og:title" content="Nina Carducci-Photographe portraits & événementiel à Bordeaux" >
-	<meta property="og:description"
-		content="Site web de Nina Carducci photographe freelance, reserver votre secance shooting et mémoriser vos evenements à Bordeaux" >
-	<meta property="og:image" content="./assets/images/nina.webp" >
-    </head>
-    <body>
-      <div class="top-header">
-        <h1 class="name">Nina Carducci</h1>
-        <div class="nav">
-          <ul>
-            <li><a href="#about">À propos</a></li>
-            <li><a href="#gallery">Galerie</a></li>
-            <li><a href="#services">Service</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li>
-              <a
-                class="social-link"
-                href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-                target="_blank"
-                ><img
-                  src="assets/imagesWebP/instagram.png"
-                  alt="logo lien instagrame"
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <!-- meta card twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ninacarducci" />
+    <meta name="twitter:creator" content="@ninacarducci" />
+    <meta
+      property="og:url"
+      content="https://theroseofthephoenix.github.io/ninacarducci-p9/"
+    />
+    <meta
+      property="og:title"
+      content="Nina Carducci-Photographe portraits & événementiel à Bordeaux"
+    />
+    <meta
+      property="og:description"
+      content="Site web de Nina Carducci photographe freelance, reserver votre secance shooting et mémoriser vos evenements à Bordeaux"
+    />
+    <meta property="og:image" content="./assets/images/nina.webp" />
+  </head>
+  <body>
+    <header class="top-header">
+      <!-- remplacer Div par Header -->
+      <h1 class="name">Nina Carducci</h1>
+      <nav class="nav">
+        <!-- remplacer Div par navr -->
+        <ul>
+          <li><a href="#about">À propos</a></li>
+          <li><a href="#gallery">Galerie</a></li>
+          <li><a href="#services">Service</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li>
+            <a
+              class="social-link"
+              href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
+              target="_blank"
+              ><img
+                src="assets/imagesWebP/instagram.png"
+                alt="logo lien instagrame"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
       <div id="header">
         <div
           id="carouselExampleIndicators"
@@ -346,6 +375,6 @@
           </div>
         </div>
       </div>
-    </body>
-  </html>
+    </main>
+  </body>
 </html>
