--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
+      defer
     ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
+    <script src="./assets/maugallery.js" defer></script>
+    <script src="./assets/scripts.js" defer></script>
     <!-- données enrichis -->
-    <script type="application/ld+json">
+    <script type="application/ld+json" defer>
       {
         "@context": "http://schema.org",
         "image": "	https://theroseofthephoenix.github.io/ninacarducci…ssets/imagesWebP/auto-portrait-Nina-Carducci.webp",
@@ -89,10 +90,10 @@
   </head>
   <body>
     <header class="top-header">
-      <!-- remplacer Div par Header -->
+      <!-- Div par Header -->
       <h1 class="name">Nina Carducci</h1>
       <nav class="nav">
-        <!-- remplacer Div par navr -->
+        <!-- Div par nav -->
         <ul>
           <li><a href="#about">À propos</a></li>
           <li><a href="#gallery">Galerie</a></li>
@@ -112,6 +113,7 @@
       </nav>
     </header>
     <main>
+      <!-- Ajouter main -->
       <div id="header">
         <div
           id="carouselExampleIndicators"
@@ -352,7 +354,8 @@
               N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24
               heures
             </p>
-            <form action="" method="post">
+            <form action="#" method="post">
+              <!-- remplissage action vide -->
               <label for="nom">Nom</label>
               <input type="text" name="nom" id="nom" />
               <label for="email">Email</label>
