ajout dun footer

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             de la tendresse et de lumière à chaque fois que vous poserez les
             yeux sur vos photos.
           </p>
+          <p>Nina Carducci-Photographe portraits & événementiel à Bordeaux</p>
         </div>
       </div>
       <div id="gallery">
@@ -379,5 +380,6 @@
         </div>
       </div>
     </main>
+    <footer><p>Photographe portraits & événementiel à Bordeaux</p></footer>
   </body>
 </html>
