optimisation du slider et refonte des tweeter card

--- a/index.html
+++ b/index.html
@@ -33,22 +33,7 @@
     ></script>
     <script src="./assets/maugallery.js" defer></script>
     <script src="./assets/scripts.js" defer></script>
-    <!--prechargement des images du slider-->
-    <link
-      rel="preload"
-      href="./assets/imagesWebP/slider/ryoji-iwata.webp"
-      as="image"
-    />
-    <link
-      rel="preload"
-      href="./assets/imagesWebP/slider/edward-cisneros.webp"
-      as="image"
-    />
-    <link
-      rel="preload"
-      href="./assets/imagesWebP/slider/nicholas-green.webp"
-      as="image"
-    />
+
     <!-- données enrichis -->
     <script type="application/ld+json" defer>
       {
@@ -87,22 +72,18 @@
     />
 
     <!-- meta card twitter -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ninacarducci" />
-    <meta name="twitter:creator" content="@ninacarducci" />
     <meta
-      property="og:url"
-      content="https://theroseofthephoenix.github.io/ninacarducci-p9/"
-    />
-    <meta
-      property="og:title"
+      name="twitter:title"
       content="Nina Carducci-Photographe portraits & événementiel à Bordeaux"
     />
     <meta
-      property="og:description"
-      content="Site web de Nina Carducci photographe freelance, reserver votre secance shooting et mémoriser vos evenements à Bordeaux"
+      name="twitter:description"
+      content="Site web de Nina Carducci photographe freelance, réservez votre séance shooting et mémorisez vos événements à Bordeaux"
     />
-    <meta property="og:image" content="./assets/images/nina.webp" />
+    <meta name="twitter:creator" content="@ninacarducci" />
+    <meta name="twitter:image" content="./assets/images/nina.webp" />
   </head>
   <body>
     <header class="top-header">
@@ -168,9 +149,8 @@
                   "
                 />
                 <img
-                  src="./assets/imagesWebP/slider/ryoji-iwata.webp"
+                  src="./assets/imagesWebP/slider/ryoji-iwata_3_11zon.webp"
                   class="d-block w-100"
-                  loading="lazy"
                   alt="portrait d'homme d'affaire traversant un passage piéton"
                 />
               </picture>
@@ -184,9 +164,8 @@
                   "
                 />
                 <img
-                  src="./assets/imagesWebP/slider/edward-cisneros.webp"
+                  src="./assets/imagesWebP/slider/edward-cisneros_1_11zon.webp"
                   class="d-block w-100"
-                  loading="lazy"
                   alt="photo d'un couple de marier s'embrassant"
                 />
               </picture>
@@ -200,7 +179,7 @@
                   "
                 />
                 <img
-                  src="./assets/imagesWebP/slider/nicholas-green.webp"
+                  src="./assets/imagesWebP/slider/nicholas-green_2_11zon.webp"
                   class="d-block w-100"
                   loading="lazy"
                   alt="Foule du concert de Nicholas Green"
